# devilutionx-graphics-tools

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: Linux_x64.yml  Windows_MinGW_x86_64.yml
cmake/: DvlGfx.cmake.in
data/: README.md
src/: argument_parser.hpp  cel2clx.cpp  cel2clx.hpp  cel2clx_main.cpp  cl22clx.cpp  cl22clx.hpp  cl22clx_main.cpp  endian.hpp  io_error.hpp  pcx.cpp  pcx.hpp  pcx2clx.cpp  pcx2clx.hpp  pcx2clx_main.cpp
src/internal/: argument_parser.hpp  cel2clx.cpp  cel2clx_main.cpp  cl22clx.cpp  cl22clx_main.cpp  clx2pcx_main.cpp  clx2pixels.cpp  clx_encode.cpp  clx_encode.hpp  endian.hpp  pcx.cpp  pcx.hpp  pcx2clx.cpp  pcx2clx_main.cpp  pcx_encode.cpp  pcx_encode.hpp  pixels2clx.cpp
src/public/include/: cel2clx.hpp  cl22clx.hpp  clx2pixels.hpp  clx_decode.hpp  clx_encode.hpp  dvl_gfx_common.hpp  dvl_gfx_endian.hpp  pcx2clx.hpp  pixels2clx.hpp
